Fix:layout issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -566,40 +566,6 @@ a {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 470px) {
-  .container {
-    max-width: 470px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .absolute {
   position: absolute;
 }
@@ -642,6 +608,14 @@ a {
 
 .left-1\/2 {
   left: 50%;
+}
+
+.bottom-2\/3 {
+  bottom: 66.666667%;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .z-10 {
@@ -749,6 +723,10 @@ a {
   margin-top: 10rem;
 }
 
+.mt-60 {
+  margin-top: 15rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -767,6 +745,10 @@ a {
 
 .h-1 {
   height: 0.25rem;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-screen {
@@ -793,10 +775,6 @@ a {
   height: 13rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .w-full {
   width: 100%;
 }
@@ -819,18 +797,6 @@ a {
 
 .w-auto {
   width: auto;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-80 {
-  width: 20rem;
 }
 
 .max-w-7xl {
@@ -923,10 +889,6 @@ a {
   gap: 0.75rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
@@ -965,6 +927,11 @@ a {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
 .bg-pink-100 {
@@ -1226,10 +1193,6 @@ a {
   /* overflow: hidden; */
 }
 
-.blog-section {
-  height: 100vh;
-}
-
 @font-face {
   font-family: 'Qaligo';
 
@@ -1303,10 +1266,6 @@ a {
     width: 20rem;
   }
 
-  .sm\:gap-8 {
-    gap: 2rem;
-  }
-
   .sm\:gap-6 {
     gap: 1.5rem;
   }
@@ -1322,11 +1281,6 @@ a {
 
   .sm\:pt-16 {
     padding-top: 4rem;
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .sm\:text-5xl {
@@ -1357,18 +1311,9 @@ a {
   .sm\:leading-loose {
     line-height: 2;
   }
-
-  .sm\:text-black {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity));
-  }
 }
 
 @media (min-width: 768px) {
-  .md\:top-1\/3 {
-    top: 33.333333%;
-  }
-
   .md\:col-start-2 {
     grid-column-start: 2;
   }
@@ -1453,8 +1398,8 @@ a {
     gap: 8rem;
   }
 
-  .md\:gap-y-24 {
-    row-gap: 6rem;
+  .md\:gap-y-12 {
+    row-gap: 3rem;
   }
 
   .md\:p-16 {
@@ -1488,11 +1433,6 @@ a {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .md\:text-xl {
